--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <ul>
         <li>Sycamore ACM</li>
         <li>Sycamore Robotics</li>
-        <li>Science Olympiad</li>
+        <li><a href = "www.youtube.com">Science Olympiad</a></li>
        <ul>
       </div>
   </body>
